# Changelog
Alle wesentlichen Änderungen für dieses Projekt werden hier dokumentiert.

Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog].

## [UNRELEASED] -- XXXX-XX-XX
* In CAS Prozeduren die Last* Spalten fühlen, um Truncated Fehler auf Azure zu vermeiden
* Helper-Version in Manifest an Helper-pom anpassen

## [12.63.10] -- 2023-06-05
* Helper-Manifest ausbessern

## [12.63.9] -- 2023-06-02
* Workflow ReleaseAppAndHelper veröffentlicht die Dockerfile auf Docker.io

## [12.63.8] -- 2023-06-02
* Helper Version Updaten
* Workflow ReleaseAppAndHelper korrigiert
* Tycho-Version im Client auf 3.0.4 erhöhen

## [12.63.7] -- 2023-06-02
* Abschneiden von Daten beim Setup direkt in der Methode processSqlProcedureRequest erlauben

## [12.63.1 - 12.63.6] -- 2023-06-01
* Abschneiden von Daten beim Setup ermöglichen (LastUser von AZURE zu lang)

## [12.62.0] -- 2023-05-25
* Reihenfolge der `Setup.xml` Aufrufe wird nun mittels eines Graphen ermittelt, 3rd Party Libraries werden ignoriert.
* Eventhandling von Ncore für Extensions über `aero.minova.service.event.dispatcher` bereitstellen.
* Abschneiden von Daten beim Setup ermöglichen (LastUser von AZURE zu lang)

## [12.61.3] -- 2023-05-23
* Release Workflow korrigieren, so dass DOCKERFILE wieder auf Docker.io gepushed wird

## [12.61.2] -- 2023-05-23
* PasswordEncoderExtension entfernen, Passwort schon im Helper verschlüsseln
* Update auf SpringBoot 3.1.0.
* Bei View-Anfragen die Zeit von Instants und LocalDates mit beachten
* Für Azure Authentifiezierung fehlende Lib hinzufügen

## [12.61.1] -- 2023-05-12
* Fehler NACH Verarbeiten von XProcedures korrekt zurückgeben
* Autocommit per default auf `false` stellen

## [12.61.0] -- 2023-05-11
* AuthorizationController zu AuthorizationService umbenennen, da es kein Controller ist.

## [12.60.2] -- 2023-05-10
* Update auf SpringBoot 3.0.6.
* KeyText in xtcasUser von 10 auf 50 Zeichen verlängert

## [12.60.1] -- 2023-04-27