@@ -1,35 +1,0 @@
-name: Release Test
-on:
-  workflow_dispatch:
-    inputs:
-      releaseVersion:
-        description: 'Release Version'
-        required: true
-        default: ''
-      nextDevelopmentVersion:
-        description: 'Next Development Version ("-SNAPSHOT" muss nicht angegeben werden.)'
-        required: true
-        default: ''
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          java-package: 'jdk'
-      - name: Build
-        run: |
-          git config --global user.email "service@minova.com"
-          git config --global user.name "minova-worker"
-          cd $GITHUB_WORKSPACE/cas.app
-          docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_ACCESS_TOKEN }}
-          echo docker build --tag=${{ secrets.DOCKER_USERNAME }}/aero.minova.cas.app:${{ github.event.inputs.releaseVersion }} --build-arg casVersion=${{ github.event.inputs.releaseVersion }} .
-          docker build --tag=${{ secrets.DOCKER_USERNAME }}/aero.minova.cas.app:${{ github.event.inputs.releaseVersion }} --build-arg casVersion=${{ github.event.inputs.releaseVersion }} .
-          docker push ${{ secrets.DOCKER_USERNAME }}/aero.minova.cas.app:${{ github.event.inputs.releaseVersion }}
-        env:
-          MAIN_GITHUB_RELEASE_USERNAME: ${{ secrets.MAIN_GITHUB_RELEASE_USERNAME }}
-          MAIN_GITHUB_RELEASE_TOKEN: ${{ secrets.MAIN_GITHUB_RELEASE_TOKEN }}
-          GITHUB_ACCESS_TOKEN: ${{ secrets.MAIN_GITHUB_RELEASE_TOKEN }}
